--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {%- include navbar.html -%}
+    {%- include navbar-2.html -%}
 
     <main id="main" role="main">
       {{ content }}
