--- a/_includes/new-nav.html
+++ b/_includes/new-nav.html
@@ -8,7 +8,7 @@
 	{% assign pages = site.pages | sort: 'title' %}
 	{% for page in pages %}
 	{% if page.layout and page.path contains 'real' and page.menu == true %}
-		<li class="nav-list__item"><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+		<li class="nav-list__item"><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
 	{% endif %}
 	{% endfor %}
 	</ul>
