--- a/_layouts/no-style.html
+++ b/_layouts/no-style.html
@@ -24,6 +24,7 @@
         {{ content }}
     {% include footer.html %}
     <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ 'assets/js/hammer.min.js' | relative_url }}"></script>
 </body>
 
 </html>
