Add HTTP protocol to home links!
- That must have been the final thing causing the errors

- Figure out how to do it with the site.url syntax at some point
  but don't worry about it for right now

--- a/_includes/new-nav.html
+++ b/_includes/new-nav.html
@@ -4,7 +4,7 @@
 		<h2>Menu</h2>
 	</section>
 	<ul class="vertical-nav__list">
-		<li class="nav-list__item"><a href="katherinedoes.design">Home</a></li>
+		<li class="nav-list__item"><a href="http://katherinedoes.design">Home</a></li>
 	{% assign pages = site.pages | sort: 'title' %}
 	{% for page in pages %}
 	{% if page.layout and page.path contains 'real' and page.menu == true %}
