Add border & padding around each project

--- a/assets/css/_sass/_pages/_portfolio.scss
+++ b/assets/css/_sass/_pages/_portfolio.scss
@@ -98,6 +98,9 @@
 
 .portfolio-gallery__project {
 	margin: 2rem 0;
+	margin-top: 1rem;
+	padding: 1em;
+	border: 1px solid $jet;
 }
 
 /* Title: */
