--- a/assets/css/_sass/_pages/_portfolio.scss
+++ b/assets/css/_sass/_pages/_portfolio.scss
@@ -101,6 +101,8 @@
 	margin-top: 1rem;
 	padding: 1em;
 	border: 1px solid $jet;
+	background-color: white;
+	box-shadow: 4px 4px 0 0 hsla(0,0,0,.5);
 }
 
 /* Title: */
