--- a/assets/css/_sass/_pages/_portfolio.scss
+++ b/assets/css/_sass/_pages/_portfolio.scss
@@ -102,7 +102,10 @@
 	padding: 1em;
 	border: 1px solid $jet;
 	background-color: white;
-	box-shadow: 4px 4px 0 0 hsla(0,0,0,.5);
+	box-shadow: 2px 2px 0 0 hsla(0,0,0,.5);
+	@media screen and (min-width: 600px) {
+		box-shadow: 4px 4px 0 0 hsla(0,0,0,.5);
+	}
 }
 
 /* Title: */
