--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="footer-border">
 		<h3 class="footer-title">Show yourself around:</h3>
 		<ul class="footer-list">
-			<li class="footer-list__item"><a href="http://katherinedoes.design">Home</a></li>
+			<li class="footer-list__item"><a href="{{ site.url }}">Home</a></li>
 			<li class="footer-list__item"><a href="{{ '/sitemap' | relative_url }}">Site map</a></li>
 		</ul>
 	</div>
