--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
     {% capture fulltitle %}
-      {% if page.title %}{{ page.title | escape | append: " | Katherine Donnally Designs Things" }}{% else %}{{ site.title | escape }}{% endif %}
+      {% if page.title %}{{ page.title | escape | append: " | Katherine Donnally Designs" }}{% else %}{{ site.title | escape }}{% endif %}
     {% endcapture %}
 
     <title>{{ fulltitle }}</title>
