Add new color variables

--- a/assets/css/_sass/_vars/_colors.scss
+++ b/assets/css/_sass/_vars/_colors.scss
@@ -18,12 +18,17 @@ $isabelline: 	 hsla(352, 43%, 93%, 1);
 // Coolors variations:
 $grayblue--light: hsla(228, 25%, 75%, 1);
 
+// Other colors:
+$mypurple: 		 hsla(261, 91%, 65%, 1);
+$mylightgray:    hsla(261, 0%, 87.5%, 1);
+
 // KEY:
 // isabelline - 	light pink
 // jet - 			20% gray
 // antiflashwhite - gray off white
 // black - 			registration black
 // grayblue - 		your favorite Tombow marker
+// mypurple - 		bright ass grape
 
 // COLOR WHEEL:
 // red: 	0;
