--- a/assets/css/_sass/_vars/_fonts.scss
+++ b/assets/css/_sass/_vars/_fonts.scss
@@ -1,6 +1,11 @@
 /* Fonts */
 
+// Google:
 $muli: 'Muli', sans-serif;
 $poppins: 'Poppins', sans-serif;
+
+// Adobe:
 $paralucent: 'paralucent', sans-serif;
 $atrament: 'atrament-web', sans-serif;
+$source-sans: source-sans-pro, sans-serif;
+$futura: futura-pt, sans-serif;
