--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@
 @import '_pages/about';
 @import '_pages/contact';
 @import '_pages/hire-me';
+@import '_pages/home';
 @import '_pages/intake';
-@import '_pages/new-home';
 @import '_pages/portfolio';
 @import '_pages/site-map';
