--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,33 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-
-    {% capture fulltitle %}
-      {% if page.title %}{{ page.title | escape | append: " | Katherine Donnally Designs" }}{% else %}{{ site.title | escape }}{% endif %}
-    {% endcapture %}
-
-    <title>{{ fulltitle }}</title>
-    <!--meta name="author" content="name">
-    <meta name="description" content="description here">
-    <meta name="keywords" content="keywords,here"-->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,400i,600,600i,700,700i|Poppins:400,400i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/dbo3mmi.css">
-    <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}" type="text/css">
-</head>
-
+<html lang="en">
+{% include head.html %}
 <body>
     {% include new-nav.html %}
     <main class="main-content-wrapper">
         {{ content }}
     </main>
     {% include footer.html %}
-
     <script src="{{ 'assets/js/hammer.min.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 </body>
-
 </html>
