--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,5 +35,6 @@
 @import '_pages/hire-me';
 @import '_pages/home';
 @import '_pages/intake';
+@import '_pages/new-home';
 @import '_pages/portfolio';
 @import '_pages/site-map';
