--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body>
+<body class="default">
     {% include new-nav.html %}
     <main class="main-content-wrapper">
         {{ content }}
