--- a/_layouts/no-style-2.html
+++ b/_layouts/no-style-2.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body class="default">
-    {% include new-nav.html %}
-        {{ content }}
-    {% include footer.html %}
+<body>
+    {{ content }}
     <script src="{{ 'assets/js/hammer.min.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 </body>
