--- a/assets/css/_sass/_layouts/_default.scss
+++ b/assets/css/_sass/_layouts/_default.scss
@@ -1,6 +1,6 @@
 /* Default Layout Styles: */
 
-body {
+body.default {
 	display: grid;
 	@media screen and (max-width: 899px) {
 		grid-template-columns: 1fr;
