Add SCSS skeleton for new homepage

--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -1,1 +1,120 @@
 /* New Home (purple and black styles): */
+
+[class*="nh__"], [class*="nh-"] {
+	font-family: $futura;
+	p {
+		font-family: $source-sans;
+	}
+}
+
+// Navigation //
+
+.nh__nav {
+
+}
+
+// Page 1 //
+
+.nh__page1 {
+
+}
+
+.nh-p1__name {
+
+}
+
+.nh-p1__title {
+
+}
+
+// Page 2 //
+
+.nh__page2 {
+
+}
+
+.nh-p2__title {
+
+}
+
+.nh-p2__options {
+
+}
+
+.nh-options__option-1 {
+
+}
+
+.nh-options__text {
+
+}
+
+.nh-options__option-2 {
+
+}
+
+.nh-options__text {
+
+}
+
+.nh-options__option-3 {
+
+}
+
+.nh-options__text {
+
+}
+
+// Page 3 //
+
+.nh__page3 {
+
+}
+
+.nh-p3__content-wrapper {
+
+}
+
+.nh-p3__title {
+
+}
+
+.nh-p3__text {
+
+}
+
+// Page 4 //
+
+.nh__page4 {
+
+}
+
+.nh-p4__line--short {
+
+}
+
+.nh-p4__line--long {
+
+}
+
+.nh-p4__link {
+
+}
+
+// Footer //
+
+.nh-footer {
+
+}
+
+.nh-footer__content-wrapper {
+
+}
+
+.nh-footer__link--name {
+
+}
+
+.nh-footer__link {
+
+}
