Add new About page styles -> rough draft, not incorporated

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,7 @@
 @import '_pages/hire-me';
 @import '_pages/home';
 @import '_pages/intake';
+@import '_pages/new-about';
 @import '_pages/new-home';
 @import '_pages/portfolio';
 @import '_pages/site-map';
