--- a/assets/css/_sass/_vars/_fonts.scss
+++ b/assets/css/_sass/_vars/_fonts.scss
@@ -9,3 +9,4 @@ $paralucent: 'paralucent', sans-serif;
 $atrament: 'atrament-web', sans-serif;
 $source-sans: source-sans-pro, sans-serif;
 $futura: futura-pt, sans-serif;
+$futura-bold: futura-pt-bold, sans-serif;
