Create SCSS file for new portfolio, adjust class names

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,4 +38,5 @@
 @import '_pages/new-about';
 @import '_pages/new-home';
 @import '_pages/portfolio';
+@import '_pages/new-portfolio';
 @import '_pages/site-map';
