--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,6 @@
 @import '_pages/intake';
 @import '_pages/new-about';
 @import '_pages/new-home';
-@import '_pages/portfolio';
+//@import '_pages/portfolio';
 @import '_pages/new-portfolio';
 @import '_pages/site-map';
