Move portfolio modal styles to separate file

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,4 +39,5 @@
 @import '_pages/new-home';
 //@import '_pages/portfolio';
 @import '_pages/new-portfolio';
+@import '_pages/portfolio-modal';
 @import '_pages/site-map';
