--- a/assets/css/_sass/_pages/_new-portfolio.scss
+++ b/assets/css/_sass/_pages/_new-portfolio.scss
@@ -96,6 +96,14 @@
 	font-family: $futura-bold;
 	font-size: 3rem;
 	text-transform: uppercase;
+	a {
+		color: black;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			color: black;
+			background-color: $mypurple;
+		}
+	}
 }
 
 .portfolio-meta__sponsor, .portfolio-meta__note {
