--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,7 @@
 
 // pages:
 @import '_pages/about';
+@import '_pages/blog';
 @import '_pages/contact';
 @import '_pages/hire-me';
 @import '_pages/home';
