--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -35,20 +35,35 @@
 }
 
 .nh-p1__content-wrapper {
-	border-bottom: 2px solid black;
+	// border-bottom: 2px solid black;
+}
+
+[class*="nh-p1__"] {
+	font-family: $futura-bold;
+	line-height: 1;
 }
 
 .nh-p1__name {
-	font-size: 6rem;
+	font-size: 5rem;
 	border-bottom-width: 0px;
 	margin-bottom: 0;
 	color: $mypurple;
 }
 
 .nh-p1__title {
-	margin-top: 0;
-	font-size: 6rem;
+	margin: 0;
+	font-size: 5rem;
 	border-bottom-width: 0px;
+}
+
+.nh-p1__text {
+	margin: 0;
+	padding: .5rem 0;
+	font-family: $futura;
+	font-size: 2.5rem;
+	text-transform: uppercase;
+	border-top: 2px solid $mypurple;
+//	border-bottom: 2px solid $mypurple;
 }
 
 // Page 2 //
@@ -59,14 +74,17 @@
 	flex-flow: column nowrap;
 	justify-content: space-around;
 	height: 100vh;
-	background-color: $mylightgray;
+	border: 1.5rem solid $mylightgray;
+	border-bottom-width: 0;
 }
 
 .nh-p2__title {
-	font-size: 4.5rem;
+	font-size: 4rem;
+	margin: 0 auto;
 	margin-top: 3rem;
 	text-align: center;
 	border-width: 0px;
+	border-bottom: 2px solid $mypurple;
 }
 
 .nh-p2__options {
@@ -75,6 +93,7 @@
 	justify-content: space-around;
 	margin-top: 1.5rem;
 	margin-bottom: 4.5rem;
+	padding: 0 8.33%;
 }
 
 [class*="nh-options__option"] {
@@ -83,8 +102,16 @@
 	align-items: center;
 	width: 25vw;
 	height: 25vw;
-	background-color: white;
+	border: 2px solid $mypurple;
 	border-radius: 50%;
+	transition: color .3s background-color .3s;
+	&:hover, &:focus {
+		background-color: $textgray;
+		cursor: pointer;
+		* {
+			color: white;
+		}
+	}
 }
 
 .nh-options__option-1 {
@@ -101,9 +128,14 @@
 
 .nh-options__text {
 	font-size: 28px;
-	font-weight: 400;
+	font-weight: 600;
 	text-transform: uppercase;
 	text-align: center;
+	max-width: 25vw;
+	transition: color .3s;
+	&:hover, &:focus {
+		color: white;
+	}
 }
 
 // Page 3 //
@@ -118,7 +150,7 @@
 	margin: 1.5rem;
 	padding: 3rem;
 	background-color: white;
-	border-radius: 16px;
+//	border-radius: 16px;
 }
 
 .nh-p3__title {
@@ -149,11 +181,11 @@
 }
 
 .nh-p4__line--short {
-	width: 66.67%;
+	width: 75%;
 }
 
 .nh-p4__line--long {
-	width: 75%;
+	width: 83.33%;
 }
 
 .nh-p4__link {
