--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -4,10 +4,10 @@
 	font-family: $futura;
 	p {
 		font-family: $source-sans;
-		color: black;
+	//	color: black;
 	}
 	a {
-		color: black;
+		color: $textgray;
 		border-bottom: 2px solid $mypurple;
 		transition: background-color .3s;
 		&:hover, &:focus {
@@ -90,7 +90,7 @@
 .nh-p2__options {
 	position: relative;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	margin-top: 1.5rem;
 	margin-bottom: 4.5rem;
 	padding: 0 8.33%;
@@ -127,11 +127,12 @@
 }
 
 .nh-options__text {
+	max-width: 25vw;
 	font-size: 28px;
 	font-weight: 600;
 	text-transform: uppercase;
 	text-align: center;
-	max-width: 25vw;
+	color: $textgray;
 	transition: color .3s;
 	&:hover, &:focus {
 		color: white;
