--- a/assets/css/_sass/_pages/_blog.scss
+++ b/assets/css/_sass/_pages/_blog.scss
@@ -35,6 +35,7 @@
 // main
 .blog__post-list {
 	width: 83.33%;
+	max-width: 900px;
 	margin: 0 auto;
 	margin-bottom: 1.5rem;
 }
@@ -45,14 +46,14 @@
 .blog-posts__post {
 	border: 2px solid $mypurple;
 	margin: 1.5rem 0;
-	padding: 1rem;
+	padding: 2rem;
 }
 
 .blog-post__title {
 	margin: .25em 0;
+	margin-top: 0;
 	font-family: $futura-bold;
 	font-size: 3rem;
-	text-transform: uppercase;
 	a {
 		color: black;
 		transition: background-color .3s;
@@ -93,7 +94,8 @@
 
 .blog-post__read-more {
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .post-read__excerpt {
@@ -104,12 +106,11 @@
 		margin: 0;
 		font-size: 20px;
 		line-height: 1.4;
+		color: $medgray;
 	}
 }
 
 .post-read__more {
-	margin-top: .25rem;
-	margin-right: 1rem;
 	padding: 1px 8px;
 	font-family: $futura-bold;
 	font-size: 20px;
