--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -19,7 +19,7 @@
 		font-family: $futura;
 		font-weight: 700;
 		line-height: 60px;
-		color: $antiflashwhite;
+		color: white;
 		transition: color .3s background-color .3s;
 		&:hover, &:focus {
 			color: $mypurple;
@@ -44,7 +44,7 @@
 		margin-right: 1.5rem;
 		font-family: $futura;
 		font-weight: 700;
-		color: $antiflashwhite;
+		color: white;
 		transition: color .3s background-color .3s;
 		&:hover, &:focus {
 			color: $mypurple;
