Create new blog post & style links + block quotes on it

--- a/assets/css/_sass/_layouts/_blog-post.scss
+++ b/assets/css/_sass/_layouts/_blog-post.scss
@@ -62,8 +62,30 @@
 	max-width: calc(900px + 8.33vw);
 	font-family: $source-sans;
 	font-size: 20px;
+	color: black;
 	p {
 		font-size: 20px;
 		line-height: 1.4;
+	}
+	a {
+		color: black;
+		border-bottom: 2px solid $mypurple;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			color: black;
+			background-color: $mypurple;
+			border-bottom-width: 0;
+		}
+	}
+	blockquote {
+		font-size: 20px;
+		color: $medgray;
+		margin: 1em 0;
+		padding: 0 1.5em;
+		padding-left: calc(1.5em - 2px);
+		border-left: 2px solid $mypurple;
+		a {
+			color: $medgray;
+		}
 	}
 }
