--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -17,15 +17,7 @@
 	}
 }
 
-// Navigation //
-
-.nh__nav {
-	height: 3rem;
-	width: 100%;
-	background-color: $mypurple
-}
-
-// Page 1 //g
+// Page 1 //
 
 .nh__page1 {
 	height: calc(100vh - 3rem);
@@ -35,7 +27,7 @@
 }
 
 .nh-p1__content-wrapper {
-	// border-bottom: 2px solid black;
+	padding: 0 4.167%;
 }
 
 [class*="nh-p1__"] {
@@ -48,12 +40,18 @@
 	border-bottom-width: 0px;
 	margin-bottom: 0;
 	color: $mypurple;
+	@media screen and (max-width: 400px) {
+		font-size: 3rem;
+	}
 }
 
 .nh-p1__title {
 	margin: 0;
 	font-size: 5rem;
 	border-bottom-width: 0px;
+	@media screen and (max-width: 400px) {
+		font-size: 3rem;
+	}
 }
 
 .nh-p1__text {
@@ -63,7 +61,9 @@
 	font-size: 2.5rem;
 	text-transform: uppercase;
 	border-top: 2px solid $mypurple;
-//	border-bottom: 2px solid $mypurple;
+	@media screen and (max-width: 400px) {
+		font-size: 1.5rem;
+	}
 }
 
 // Page 2 //
@@ -75,7 +75,9 @@
 	justify-content: space-around;
 	height: 100vh;
 	border: 1.5rem solid $mylightgray;
-//	border-bottom-width: 0;
+	@media screen and (max-width: 400px) {
+		border-width: 0;
+	}
 }
 
 .nh-p2__title {
@@ -85,6 +87,14 @@
 	text-align: center;
 	border-width: 0px;
 	border-bottom: 2px solid $mypurple;
+	@media screen and (max-width: 400px) {
+		padding: 0 4.167%;
+		font-size: 2rem;
+		font-style: italic;
+		text-align: left;
+		color: $mypurple;
+		border-bottom-width: 0;
+	}
 }
 
 .nh-p2__options {
@@ -94,6 +104,10 @@
 	margin-top: 1.5rem;
 	margin-bottom: 4.5rem;
 	padding: 0 8.33%;
+	@media screen and (max-width: 400px) {
+		flex-flow: column nowrap;
+		padding: 0 4.167%;
+	}
 }
 
 [class*="nh-options__option"] {
@@ -137,6 +151,9 @@
 	&:hover, &:focus {
 		color: white;
 	}
+	@media screen and (max-width: 400px) {
+		flex-flow: column nowrap;
+	}
 }
 
 // Page 3 //
@@ -144,15 +161,23 @@
 .nh__page3 {
 	height: 100vh;
 	background-color: $mylightgray;
+	@media screen and (max-width: 400px) {
+		height: auto;
+		background-color: white;
+	}
 }
 
 .nh-p3__content-wrapper {
-	height: calc(100vh - 2rem);
+	min-height: calc(100vh - 2rem);
 	margin: 1.5rem;
 	margin-top: 0;
 	padding: 3rem;
 	background-color: white;
-//	border-radius: 16px;
+	@media screen and (max-width: 400px) {
+		min-height: auto;
+		margin: 0;
+		padding: 0 4.167%;
+	}
 }
 
 .nh-p3__title {
@@ -160,12 +185,23 @@
 	font-size: 4.5rem;
 	font-style: italic;
 	border-bottom: 2px solid $mypurple;
+	@media screen and (max-width: 400px) {
+		font-size: 2rem;
+		color: $mypurple;
+		border-bottom-width: 0;
+	}
 }
 
 [class*="nh-p3__text"] {
 	width: 87.5%;
 	p {
 		font-size: 24px;
+	}
+	@media screen and (max-width: 400px) {
+		width: 100%;
+		p {
+			font-size: 1rem;
+		}
 	}
 }
 
@@ -201,6 +237,9 @@
 	border-bottom-width: 0px;
 	a {
 		border-bottom-width: 0px;
+	}
+	@media screen and (max-width: 400px) {
+		font-size: 3rem;
 	}
 }
 
