--- a/assets/css/_sass/_pages/_blog.scss
+++ b/assets/css/_sass/_pages/_blog.scss
@@ -62,6 +62,9 @@
 	border: 2px solid $mypurple;
 	margin: 1.5rem 0;
 	padding: 2rem;
+	@media screen and (max-width: 400px) {
+		padding: 1.5rem;
+	}
 }
 
 .blog-post__title {
@@ -77,14 +80,26 @@
 			border-bottom-width: 0;
 		}
 	}
+	@media screen and (max-width: 400px) {
+		font-size: 2rem;
+	}
 }
 
 .blog-post__meta {
 	margin-top: 0;
 	font-family: $source-sans;
 	font-weight: 400;
-	font-size: 20px;
+	font-size: 1.25rem;
 	color: $mypurple;
+	span {
+		display: none;
+	}
+	@media screen and (max-width: 400px) {
+		font-size: 18px;
+		span {
+			display: initial;
+		}
+	}
 }
 
 // ul
@@ -103,14 +118,21 @@
 	padding: 2px 4px;
 	margin-right: 4px;
 	font-family: $futura;
-	font-size: 20px;
+	font-size: 1.25rem;
 	background-color: $mypurple;
+	@media screen and (max-width: 400px) {
+		font-size: 18px;
+	}
 }
 
 .blog-post__read-more {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	@media screen and (max-width: 400px) {
+		flex-flow: column nowrap;
+		align-items: flex-start;
+	}
 }
 
 .post-read__excerpt {
@@ -119,16 +141,20 @@
 	p {
 		padding: 0;
 		margin: 0;
-		font-size: 20px;
+		font-size: 1.25rem;
 		line-height: 1.4;
 		color: $medgray;
+		@media screen and (max-width: 400px) {
+			margin: .5em 0 1em 0;
+			font-size: 18px;
+		}
 	}
 }
 
 .post-read__more {
 	padding: 1px 8px;
 	font-family: $futura-bold;
-	font-size: 20px;
+	font-size: 1.25rem;
 	text-transform: uppercase;
 	color: white;
 	background-color: black;
@@ -138,5 +164,8 @@
 	&:hover, &:focus {
 		color: black;
 		background-color: white;
+	}
+	@media screen and (max-width: 400px) {
+		font-size: 16px;
 	}
 }
