--- a/assets/css/_sass/_pages/_new-portfolio.scss
+++ b/assets/css/_sass/_pages/_new-portfolio.scss
@@ -20,22 +20,37 @@
 	font-family: $futura-bold;
 	text-align: center;
 	border-bottom-width: 0px;
+	@media screen and (max-width: 400px) {
+		margin-top: .5em;
+		font-size: 3rem;
+	}
 }
 
 [class*="portfolio-title__line--"] {
 	height: 2px;
 	margin: calc(1.5rem - 1px) auto;
 	background-color: $mypurple;
+	@media screen and (max-width: 400px) {
+		margin: calc(1rem - 1px) auto;
+	}
 }
 
 .portfolio-title__line--left {
 	width: 91.67%;
 	margin-left: 2rem;
+	@media screen and (max-width: 400px) {
+		width: calc(91.67% - 1rem);
+		margin-left: 1rem;
+	}
 }
 
 .portfolio-title__line--right {
 	width: 91.67%;
 	margin-right: 2rem;
+	@media screen and (max-width: 400px) {
+		width: calc(91.67% - 1rem);
+		margin-right: 1rem;
+	}
 }
 
 // Gallery //
@@ -105,6 +120,9 @@
 			background-color: $mypurple;
 		}
 	}
+	@media screen and (max-width: 400px) {
+		font-size: 2rem;
+	}
 }
 
 .portfolio-meta__sponsor, .portfolio-meta__role, .portfolio-meta__note {
@@ -112,6 +130,9 @@
 	font-size: 1.375rem;
 	font-weight: 400;
 	margin: 2px;
+	@media screen and (max-width: 400px) {
+		font-size: 18px;
+	}
 }
 
 .portfolio-meta__sponsor {
@@ -135,16 +156,27 @@
 	height: 2px;
 	margin: calc(1.5rem - 1px) auto;
 	background-color: $mypurple;
+	@media screen and (max-width: 400px) {
+		margin: calc(1rem - 1px) auto;
+	}
 }
 
 .portfolio-divider__line--left {
 	width: 91.67%;
 	margin-left: 2rem;
+	@media screen and (max-width: 400px) {
+		width: calc(91.67% - 1rem);
+		margin-left: 1rem;
+	}
 }
 
 .portfolio-divider__line--right {
 	width: 91.67%;
 	margin-right: 2rem;
+	@media screen and (max-width: 400px) {
+		width: calc(91.67% - 1rem);
+		margin-right: 1rem;
+	}
 }
 
 .portfolio-divider__line--left {
