--- a/assets/css/_sass/_layouts/_blog-post.scss
+++ b/assets/css/_sass/_layouts/_blog-post.scss
@@ -26,6 +26,9 @@
 		color: black;
 		background-color: white;
 	}
+	@media screen and (max-width: 400px) {
+		font-size: 18px;
+	}
 }
 
 .post-meta__title {
@@ -35,6 +38,9 @@
 	color: black;
 	border-bottom-width: 0px;
 	text-transform: none;
+	@media screen and (max-width: 400px) {
+		font-size: 2.25rem;
+	}
 }
 
 .post-meta__date {
@@ -43,6 +49,15 @@
 	font-weight: 400;
 	font-size: 20px;
 	color: $mypurple;
+	span {
+		display: none;
+	}
+	@media screen and (max-width: 400px) {
+		font-size: 18px;
+		span {
+			display: initial;
+		}
+	}
 }
 
 .post-meta__tags {
@@ -81,8 +96,8 @@
 		font-size: 20px;
 		color: $medgray;
 		margin: 1em 0;
-		padding: 0 1.5em;
-		padding-left: calc(1.5em - 2px);
+		padding: 0 1.25em;
+		padding-left: calc(1.25em - 2px);
 		border-left: 2px solid $mypurple;
 		a {
 			color: $medgray;
@@ -90,7 +105,7 @@
 	}
 	ul {
 		position: relative;
-		padding-left: 1.5em;
+		padding-left: 1.25em;
 		list-style-type: none;
 		li {
 			position: relative;
@@ -110,7 +125,7 @@
 	}
 	ol {
 		position: relative;
-		padding-left: 1.5em;
+		padding-left: 1.25em;
 		list-style: none;
 		counter-reset: ol-counter;
 		li {
@@ -125,6 +140,11 @@
 				font-weight: 700;
 				color: $mypurple;
 			}
+		}
+	}
+	@media screen and (max-width: 400px) {
+		p, ul li, ol li {
+			font-size: 18px;
 		}
 	}
 }
