--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -36,21 +36,21 @@
 }
 
 .nh-p1__name {
-	font-size: 5rem;
+	font-size: 3rem;
 	border-bottom-width: 0px;
 	margin-bottom: 0;
 	color: $mypurple;
-	@media screen and (max-width: 400px) {
-		font-size: 3rem;
+	@media screen and (min-width: 768px) {
+		font-size: 5rem;
 	}
 }
 
 .nh-p1__title {
 	margin: 0;
-	font-size: 5rem;
+	font-size: 3rem;
 	border-bottom-width: 0px;
-	@media screen and (max-width: 400px) {
-		font-size: 3rem;
+	@media screen and (min-width: 768px) {
+		font-size: 5rem;
 	}
 }
 
@@ -58,11 +58,11 @@
 	margin: 0;
 	padding: .5rem 0;
 	font-family: $futura;
-	font-size: 2.5rem;
+	font-size: 1.5rem;
 	text-transform: uppercase;
 	border-top: 2px solid $mypurple;
-	@media screen and (max-width: 400px) {
-		font-size: 1.5rem;
+	@media screen and (min-width: 768px) {
+		font-size: 2.5rem;
 	}
 }
 
@@ -74,27 +74,37 @@
 	flex-flow: column nowrap;
 	justify-content: space-around;
 	height: 100vh;
-	border: 1.5rem solid $mylightgray;
+//	border: 1.5rem solid $mylightgray;
 	@media screen and (max-width: 400px) {
 		border-width: 0;
+	}
+	@media screen and (min-width: 900px) {
+		border: 1.5rem solid $mylightgray;
 	}
 }
 
 .nh-p2__title {
-	font-size: 4rem;
 	margin: 0 auto;
-	margin-top: 3rem;
-	text-align: center;
-	border-width: 0px;
-	border-bottom: 2px solid $mypurple;
-	@media screen and (max-width: 400px) {
+	margin-top: 1rem;
+	padding: 0 4.167%;
+	font-size: 2.5rem;
+	font-style: italic;
+	text-align: left;
+	color: $mypurple;
+	border-bottom-width: 0;
+	@media screen and (min-width: 768px) {
+		font-size: 3rem;
+		margin: 0;
 		margin-top: 1rem;
-		padding: 0 4.167%;
-		font-size: 2.5rem;
-		font-style: italic;
-		text-align: left;
-		color: $mypurple;
-		border-bottom-width: 0;
+	}
+	@media screen and (min-width: 900px) {
+		margin-top: 3rem;
+		font-size: 4rem;
+		font-style: initial;
+		text-align: center;
+		color: black;
+		border-width: 0px;
+		border-bottom: 2px solid $mypurple;
 	}
 }
 
@@ -105,7 +115,7 @@
 	margin-top: 1.5rem;
 	margin-bottom: 4.5rem;
 	padding: 0 8.33%;
-	@media screen and (max-width: 400px) {
+	@media screen and (max-width: 900px) {
 		display: grid;
 		grid-template-rows: 1fr 1fr 1fr;
 		grid-template-columns: 1fr;
@@ -119,24 +129,13 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 25vw;
-	height: 25vw;
 	border: 2px solid $mypurple;
-	border-radius: 50%;
 	transition: color .3s background-color .3s;
-	&:hover, &:focus {
-		background-color: $textgray;
-		cursor: pointer;
-		* {
-			color: white;
-		}
-	}
-	@media screen and (max-width: 400px) {
+	@media screen and (max-width: 900px) {
 		width: 100%;
+		height: auto;
 		margin-bottom: 1.5rem;
 		padding: 0 1.5rem;
-		height: auto;
-		border-radius: 0;
 		background-color: $textgray;
 		* {
 			color: white;
@@ -148,6 +147,18 @@
 			background-color: white;
 			* {
 				color: $textgray;
+			}
+		}
+	}
+	@media screen and (min-width: 900px) {
+		width: 25vw;
+		height: 25vw;
+		border-radius: 50%;
+		&:hover, &:focus {
+			background-color: $textgray;
+			cursor: pointer;
+			* {
+				color: white;
 			}
 		}
 	}
@@ -166,21 +177,19 @@
 }
 
 .nh-options__text {
-	max-width: 25vw;
-	font-size: 28px;
+	width: 100%;
+	font-size: 1.5rem;
 	font-weight: 600;
 	text-transform: uppercase;
-	text-align: center;
-//	color: $textgray;
 	transition: color .3s;
-	&:hover, &:focus {
-	//	color: white;
+	@media screen and (min-width: 768px) {
+		width: 80%;
+		font-size: 2rem;
 	}
-	@media screen and (max-width: 400px) {
-		flex-flow: column nowrap;
-		width: 100%;
-		max-width: 100%;
-		font-size: 1.5rem;
+	@media screen and (min-width: 900px) {
+		max-width: 25vw;
+		font-size: 28px;
+		text-align: center;	
 	}
 }
 
