--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -262,11 +262,11 @@
 // Page 4 //
 
 .nh__page4 {
-	height: 100vh;
-	margin-top: .75rem;
-	@media screen and (max-width: 400px) {
-		height: auto;
-		margin: 2.5rem 0;
+	height: auto;
+	margin: 2.5rem 0;
+	@media screen and (min-width: 900px) {
+		height: 100vh;
+		margin-top: .75rem;
 	}
 }
 
@@ -274,6 +274,9 @@
 	height: 2px;
 	margin: calc(.75rem - 1px) auto;
 	background-color: $mypurple;
+	@media screen and (min-width: 768px) and (max-width: 1000px) {
+		margin: calc(1.25rem - 1px) auto;	
+	}
 }
 
 .nh-p4__line--short {
@@ -286,14 +289,17 @@
 
 .nh-p4__link {
 	margin: 0;
-	font-size: 4.5rem;
+	font-size: 3rem;
 	text-align: center;
 	border-bottom-width: 0px;
 	a {
 		border-bottom-width: 0px;
 	}
-	@media screen and (max-width: 400px) {
-		font-size: 3rem;
+	@media screen and (min-width: 768px) {
+		font-size: 4rem;
+	}
+	@media screen and (min-width: 900px) {
+		font-size: 4.5rem;
 	}
 }
 
