--- a/assets/css/_sass/_pages/_new-about.scss
+++ b/assets/css/_sass/_pages/_new-about.scss
@@ -14,13 +14,17 @@
 
 .na-title__text {
 	margin: .25em auto;
-	font-size: 4.5rem;
+	margin-top: .5em;
 	font-family: $futura-bold;
+	font-size: 3rem;
 	text-align: center;
 	border-bottom-width: 0px;
-	@media screen and (max-width: 400px) {
-		margin-top: .5em;
-		font-size: 3rem;
+	@media screen and (min-width: 768px) {
+		font-size: 4rem;
+	}
+	@media screen and (min-width: 900px) {
+		margin: .25em auto;
+		font-size: 4.5rem;
 	}
 }
 
