Finish up page 2 for home

--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -79,7 +79,7 @@
 		border-width: 0;
 	}
 	@media screen and (min-width: 900px) {
-		border: 1.5rem solid $mylightgray;
+	//	border: 1.5rem solid $mylightgray;
 	}
 }
 
@@ -97,14 +97,11 @@
 		margin: 0;
 		margin-top: 1rem;
 	}
-	@media screen and (min-width: 900px) {
-		margin-top: 3rem;
-		font-size: 4rem;
-		font-style: initial;
-		text-align: center;
-		color: black;
+	@media screen and (min-width: 1200px) {
+	//	margin-top: 3rem;
+		font-family: $futura-bold;
+		font-size: 4.5rem;
 		border-width: 0px;
-		border-bottom: 2px solid $mypurple;
 	}
 }
 
@@ -115,11 +112,14 @@
 	margin-top: 1.5rem;
 	margin-bottom: 4.5rem;
 	padding: 0 8.33%;
-	@media screen and (max-width: 900px) {
+	@media screen and (max-width: 1200px) {
 		display: grid;
 		grid-template-rows: 1fr 1fr 1fr;
 		grid-template-columns: 1fr;
 		height: calc(100vh - 7.5rem);
+		padding: 0 4.167%;
+	}
+	@media screen and (min-width: 1200px) {
 		padding: 0 4.167%;
 	}
 }
@@ -129,38 +129,32 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: $textgray;
 	border: 2px solid $mypurple;
 	transition: color .3s background-color .3s;
-	@media screen and (max-width: 900px) {
+	* {
+		color: white;
+	}
+	&:hover, &:focus {
+		background-color: white;
+		cursor: pointer;
+		* {
+			color: $textgray;
+		}
+	}
+	@media screen and (max-width: 1200px) {
 		width: 100%;
 		height: auto;
 		margin-bottom: 1.5rem;
 		padding: 0 1.5rem;
-		background-color: $textgray;
-		* {
-			color: white;
-		}
 		span {
 			display: none;
 		}
-		&:hover, &:focus {
-			background-color: white;
-			* {
-				color: $textgray;
-			}
-		}
 	}
-	@media screen and (min-width: 900px) {
-		width: 25vw;
-		height: 25vw;
+	@media screen and (min-width: 1200px) {
+		width: 27vw;
+		height: 27vw;
 		border-radius: 50%;
-		&:hover, &:focus {
-			background-color: $textgray;
-			cursor: pointer;
-			* {
-				color: white;
-			}
-		}
 	}
 }
 
@@ -186,8 +180,8 @@
 		width: 80%;
 		font-size: 2rem;
 	}
-	@media screen and (min-width: 900px) {
-		max-width: 25vw;
+	@media screen and (min-width: 1200px) {
+		max-width: 27vw;
 		font-size: 28px;
 		text-align: center;	
 	}
