--- a/assets/css/_sass/_pages/_new-home.scss
+++ b/assets/css/_sass/_pages/_new-home.scss
@@ -43,6 +43,9 @@
 	@media screen and (min-width: 768px) {
 		font-size: 5rem;
 	}
+	@media screen and (min-width: 1440px) {
+		font-size: 6rem;
+	}
 }
 
 .nh-p1__title {
@@ -51,6 +54,9 @@
 	border-bottom-width: 0px;
 	@media screen and (min-width: 768px) {
 		font-size: 5rem;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 6rem;
 	}
 }
 
@@ -63,6 +69,9 @@
 	border-top: 2px solid $mypurple;
 	@media screen and (min-width: 768px) {
 		font-size: 2.5rem;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 3rem;
 	}
 }
 
