Adjust menu for big screen, vertically center elements

--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -8,11 +8,22 @@
 	height: 60px;
 	width: 100%;
 	background-color: $mypurple;
+	@media screen and (min-width: 1440px) {
+		height: 70px;
+		a {
+			font-size: 1.25rem;
+		}
+	}
 }
 
 // Home button //
 
 .menu__home-link {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
 	a {
 		margin-left: 1.5rem;
 		margin-right: 1.5rem;
@@ -34,6 +45,8 @@
 .menu__page-list {
 	position: relative;
 	display: flex;
+	justify-content: center;
+	align-items: center;
 	list-style-type: none;
 	padding-left: 0;
 	margin-left: 0;
