--- a/assets/css/_sass/_pages/_new-intake.scss
+++ b/assets/css/_sass/_pages/_new-intake.scss
@@ -25,6 +25,9 @@
 		margin: .25em auto;
 		font-size: 4.5rem;
 	}
+	@media screen and (min-width: 1440px) {
+		font-size: 5rem;
+	}
 }
 
 [class*="intake-title__line--"] {
@@ -69,6 +72,11 @@
 	@media screen and (max-width: 400px) {
 		p {
 			font-size: 18px;
+		}
+	}
+	@media screen and (min-width: 1440px) {
+		p {
+			font-size: 24px;
 		}
 	}
 }
