Add text aspects of portfolio adjustment for big screen

--- a/assets/css/_sass/_pages/_new-portfolio.scss
+++ b/assets/css/_sass/_pages/_new-portfolio.scss
@@ -28,6 +28,9 @@
 		margin: .25em auto;
 		font-size: 4.5rem;
 	}
+	@media screen and (min-width: 1440px) {
+		font-size: 5rem;
+	}
 }
 
 [class*="portfolio-title__line--"] {
@@ -127,6 +130,9 @@
 	@media screen and (max-width: 400px) {
 		font-size: 2rem;
 	}
+	@media screen and (min-width: 1440px) {
+		font-size: 3.5rem;
+	}
 }
 
 .portfolio-meta__sponsor, .portfolio-meta__role, .portfolio-meta__note {
@@ -136,6 +142,9 @@
 	margin: 2px;
 	@media screen and (max-width: 400px) {
 		font-size: 18px;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 1.5rem;
 	}
 }
 
