--- a/assets/css/_sass/_pages/_new-portfolio.scss
+++ b/assets/css/_sass/_pages/_new-portfolio.scss
@@ -106,6 +106,9 @@
 		height: auto;
 		width: 100%;
 	}
+	@media screen and (min-width: 1440px) {
+		height: 240px;
+	}
 }
 
 .portfolio-proj__metadata {
