--- a/assets/css/_sass/_pages/_portfolio-modal.scss
+++ b/assets/css/_sass/_pages/_portfolio-modal.scss
@@ -47,4 +47,7 @@
 	font-family: $source-sans;
 	font-size: 24px;
 	color: white;
+	@media screen and (min-width: 1440px) {
+		font-size: 32px;
+	}
 }
