--- a/_includes/new-menu.html
+++ b/_includes/new-menu.html
@@ -1,6 +1,6 @@
 <nav class="menu-wrapper">
 	<section class="menu__home-link"> <!-- turn into logo -->
-		<a href="{{ site.url}}">Home</a>
+		<a href="{{ site.url}}" aria-label="Home page link"><img src="{{ 'assets/img/svg/logo-white.svg' | relative_url }}" alt="Initials logo"></a>
 	</section>
 	<ul class="menu__page-list">
 	{% assign pages = site.pages | where: 'menu', 'true' | sort: 'order' %}
