--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -25,17 +25,21 @@
 	align-items: center;
 	height: 100%;
 	a {
+		height: auto;
 		margin-left: 1.5rem;
 		margin-right: 1.5rem;
 		font-family: $futura;
 		font-weight: 700;
-		line-height: 60px;
+		line-height: 1;
 		color: white;
-		transition: color .3s background-color .3s;
+		transition: color .3s, background-color .3s;
 		&:hover, &:focus {
 			color: $mypurple;
 			background-color: black;
 			border-bottom-width: 0;
+		}
+		img {
+			height: 2rem;
 		}
 	}
 }
