--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -25,7 +25,8 @@
 	align-items: center;
 	height: 100%;
 	a {
-		height: auto;
+		display: flex;
+		align-items: center;
 		margin-left: 1.5rem;
 		margin-right: 1.5rem;
 		font-family: $futura;
@@ -39,7 +40,13 @@
 			border-bottom-width: 0;
 		}
 		img {
-			height: 2rem;
+			height: 1.5rem;
+			@media screen and (min-width: 768px) {
+				height: 1.75rem;
+			}
+			@media screen and (min-width: 1200px) {
+				height: 2rem;
+			}
 		}
 	}
 }
