--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -9,7 +9,15 @@
 }
 
 .home-1__content-wrapper {
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	padding: 2rem 8.33%;
+	border: 4px solid black;
+}
 
+.home-1__text-wrapper {
+	align-self: center;
 }
 
 .home-1__page-title {
