--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -6,26 +6,51 @@
 
 .home__page-1 {
 	height: 100vh;
-}
-
-.home-1__content-wrapper {
 	display: flex;
 	align-content: center;
 	justify-content: center;
-	padding: 2rem 8.33%;
-	border: 4px solid black;
+}
+
+.home-1__content-wrapper {
+	position: relative;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+//	width: 100vw;
+	margin: 0;
 }
 
 .home-1__text-wrapper {
-	align-self: center;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem 2rem;
+	border: 4px solid black;
+	@media screen and (max-width: 500px) {
+		margin: 1rem;
+	}
+	@media screen and (min-width: 768px) {
+		padding: 3rem 4rem;
+	}
 }
 
 .home-1__page-title {
-
+	font-family: $poppins;
+	border-width: 0;
+	@media screen and (min-width: 768px) {
+		font-size: 4rem;
+	}
 }
 
 .home-1__subtitle {
-
+	font-family: $poppins;
+	text-transform: uppercase;
+	@media screen and (min-width: 768px) {
+		font-size: 3rem;
+	}
 }
 
 .home__page-2 {
